--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8793,10 +8793,22 @@ button.close {
 }
 /* line 11, ../sass/styles.scss */
 body {
-  padding-top: 20px;
+  background-color: #F2F2F2;
+  font-family: 'Roboto', sans-serif;
 }
 
-/* line 15, ../sass/styles.scss */
+/* line 16, ../sass/styles.scss */
+h1, h2, h3, h4 {
+  font-family: 'Raleway', sans-serif;
+}
+
+/* line 20, ../sass/styles.scss */
+.container {
+  padding-top: 20px;
+  background-color: #FFF;
+}
+
+/* line 25, ../sass/styles.scss */
 .footer {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -8805,27 +8817,27 @@ body {
 }
 
 /* Main marketing message and sign up button */
-/* line 23, ../sass/styles.scss */
+/* line 33, ../sass/styles.scss */
 .jumbotron {
   text-align: center;
   background-color: transparent;
 }
 
-/* line 27, ../sass/styles.scss */
+/* line 37, ../sass/styles.scss */
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
 }
 
 /* Customize the nav-justified links to be fill the entire space of the .navbar */
-/* line 34, ../sass/styles.scss */
+/* line 44, ../sass/styles.scss */
 .nav-justified, .nav-tabs.nav-justified {
   background-color: #eee;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-/* line 39, ../sass/styles.scss */
+/* line 49, ../sass/styles.scss */
 .nav-justified > li > a, .nav-tabs.nav-justified > li > a {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -8846,7 +8858,7 @@ body {
   border-bottom: 1px solid #d5d5d5;
 }
 
-/* line 55, ../sass/styles.scss */
+/* line 65, ../sass/styles.scss */
 .nav-justified > .active > a,
 .nav-justified > .active > a:hover,
 .nav-justified > .active > a:focus {
@@ -8856,36 +8868,36 @@ body {
   box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15);
 }
 
-/* line 63, ../sass/styles.scss */
+/* line 73, ../sass/styles.scss */
 .nav-justified > li:first-child > a {
   border-radius: 5px 5px 0 0;
 }
 
-/* line 66, ../sass/styles.scss */
+/* line 76, ../sass/styles.scss */
 .nav-justified > li:last-child > a {
   border-bottom: 0;
   border-radius: 0 0 5px 5px;
 }
 
 @media (min-width: 768px) {
-  /* line 72, ../sass/styles.scss */
+  /* line 82, ../sass/styles.scss */
   .nav-justified, .nav-tabs.nav-justified {
     max-height: 52px;
   }
 
-  /* line 75, ../sass/styles.scss */
+  /* line 85, ../sass/styles.scss */
   .nav-justified > li > a, .nav-tabs.nav-justified > li > a {
     border-right: 1px solid #d5d5d5;
     border-left: 1px solid #fff;
   }
 
-  /* line 79, ../sass/styles.scss */
+  /* line 89, ../sass/styles.scss */
   .nav-justified > li:first-child > a {
     border-left: 0;
     border-radius: 5px 0 0 5px;
   }
 
-  /* line 83, ../sass/styles.scss */
+  /* line 93, ../sass/styles.scss */
   .nav-justified > li:last-child > a {
     border-right: 0;
     border-radius: 0 5px 5px 0;
@@ -8894,7 +8906,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
-  /* line 92, ../sass/styles.scss */
+  /* line 102, ../sass/styles.scss */
   .masthead,
   .marketing,
   .footer {
