--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,11 +15,11 @@ body {
 
 h1, h2, h3, h4 {
 	font-family: 'Raleway', sans-serif;
+    font-weight: 300;
 }
 
 .container {
 	padding-top: 20px;
-	background-color: #FFF;
 }
 
 .footer {
@@ -29,10 +29,21 @@ h1, h2, h3, h4 {
   border-top: 1px solid #eee;
 }
 
+.masthead > h3 {
+	font-size: $font-size-h1;
+}
+
 /* Main marketing message and sign up button */
 .jumbotron {
+	margin-top: 10px;
   text-align: center;
-  background-color: transparent;
+  // background-color: transparent;
+  background-image: url('../images/property-jumbotron.jpg');
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+
+  color: #FFF;
 }
 .jumbotron .btn {
   padding: 14px 24px;
