--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8793,7 +8793,6 @@ button.close {
 }
 /* line 11, ../sass/styles.scss */
 body {
-  background-color: #F2F2F2;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -8804,11 +8803,6 @@ h1, h2, h3, h4 {
 }
 
 /* line 21, ../sass/styles.scss */
-.container {
-  padding-top: 20px;
-}
-
-/* line 25, ../sass/styles.scss */
 .footer {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -8816,21 +8810,30 @@ h1, h2, h3, h4 {
   border-top: 1px solid #eee;
 }
 
-/* line 32, ../sass/styles.scss */
+/* line 28, ../sass/styles.scss */
+.masthead {
+  margin: 15px auto;
+}
+
+/* line 31, ../sass/styles.scss */
 .masthead > h3 {
   font-size: 36px;
 }
 
 /* Main marketing message and sign up button */
-/* line 37, ../sass/styles.scss */
+/* line 36, ../sass/styles.scss */
 .jumbotron {
-  margin-top: 10px;
   text-align: center;
   background-image: url("../images/property-jumbotron.jpg");
   background-size: cover;
   background-position: center;
   overflow: hidden;
   color: #FFF;
+}
+
+/* line 45, ../sass/styles.scss */
+.jumbotron-text {
+  margin: 100px auto;
 }
 
 /* line 48, ../sass/styles.scss */
@@ -8840,14 +8843,17 @@ h1, h2, h3, h4 {
 }
 
 /* Customize the nav-justified links to be fill the entire space of the .navbar */
-/* line 55, ../sass/styles.scss */
-.nav-justified, .nav-tabs.nav-justified {
-  background-color: #eee;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+/* line 54, ../sass/styles.scss */
+.navbar-container {
+  background-color: #eeeeee;
 }
 
-/* line 60, ../sass/styles.scss */
+/* line 57, ../sass/styles.scss */
+.nav-justified, .nav-tabs.nav-justified {
+  background-color: #eee;
+}
+
+/* line 62, ../sass/styles.scss */
 .nav-justified > li > a, .nav-tabs.nav-justified > li > a {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -8855,68 +8861,41 @@ h1, h2, h3, h4 {
   font-weight: bold;
   color: #777;
   text-align: center;
-  background-color: #e5e5e5;
-  /* Old browsers */
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e5e5e5));
-  background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
-  background-image: -o-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
-  background-image: linear-gradient(to bottom, #f5f5f5 0%, #e5e5e5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 );
-  /* IE6-9 */
-  background-repeat: repeat-x;
-  /* Repeat the gradient */
-  border-bottom: 1px solid #d5d5d5;
 }
 
-/* line 76, ../sass/styles.scss */
+/* line 78, ../sass/styles.scss */
 .nav-justified > .active > a,
 .nav-justified > .active > a:hover,
 .nav-justified > .active > a:focus {
   background-color: #ddd;
-  background-image: none;
-  -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15);
-  box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15);
-}
-
-/* line 84, ../sass/styles.scss */
-.nav-justified > li:first-child > a {
-  border-radius: 5px 5px 0 0;
-}
-
-/* line 87, ../sass/styles.scss */
-.nav-justified > li:last-child > a {
-  border-bottom: 0;
-  border-radius: 0 0 5px 5px;
 }
 
 @media (min-width: 768px) {
-  /* line 93, ../sass/styles.scss */
+  /* line 95, ../sass/styles.scss */
   .nav-justified, .nav-tabs.nav-justified {
     max-height: 52px;
   }
 
-  /* line 96, ../sass/styles.scss */
+  /* line 98, ../sass/styles.scss */
   .nav-justified > li > a, .nav-tabs.nav-justified > li > a {
     border-right: 1px solid #d5d5d5;
     border-left: 1px solid #fff;
   }
 
-  /* line 100, ../sass/styles.scss */
+  /* line 102, ../sass/styles.scss */
   .nav-justified > li:first-child > a {
     border-left: 0;
-    border-radius: 5px 0 0 5px;
   }
 
-  /* line 104, ../sass/styles.scss */
+  /* line 106, ../sass/styles.scss */
   .nav-justified > li:last-child > a {
     border-right: 0;
-    border-radius: 0 5px 5px 0;
   }
 }
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
-  /* line 113, ../sass/styles.scss */
+  /* line 115, ../sass/styles.scss */
   .masthead,
   .marketing,
   .footer {
