--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -7,6 +7,12 @@
 // Import Bootstrap for Sass
 @import "bootstrap";
 
+
+html {
+    
+    :focus {outline:none;}
+::-moz-focus-inner {border:0;}
+}
 // Custom SASS
 body {
 //  background-color: #FFF;
@@ -19,17 +25,92 @@ h1, h2, h3, h4 {
 }
 
 .footer {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  margin-top: 40px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+//  margin-top: 20px;
   border-top: 1px solid #eee;
 }
 
 .masthead {
-    margin: 15px auto;
+//    margin: 15px auto;
 }
+
+.navbar { margin-bottom: 0;}
+.navbar-default {
+//    background-color: #FFF;
+//    border-color: #FFF;
+}
+
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px;
+  width: auto;
+}
+
+.example3 .navbar-brand {
+  height: 100px;
+}
+
+.example3 .nav >li >a {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.example3 .navbar-toggle {
+  padding: 10px;
+  margin: 25px 15px 25px 0;
+}
+
+ .navbar-default .navbar-nav > .active{
+       background: #FFF;
+ }
+     .navbar-default .navbar-nav > .active > a, 
+     .navbar-default .navbar-nav > .active > a:hover, 
+     .navbar-default .navbar-nav > .active > a:focus {
+     background-color: #F8F8F8;
+ }
 .masthead > h3 {
 	font-size: $font-size-h1;
+}
+
+#one {     
+    position:relative;
+    width:100% !important;
+    -webkit-box-shadow:0px 1px 5px lighten(#999, 20%);
+     -moz-box-shadow:0px 1px 5px lighten(#999, 20%);
+     box-shadow:0px 1px 5px lighten(#999, 20%);
+    
+    .container {
+        
+        padding-top: 25px;
+        padding-bottom: 25px;
+        
+    }
+}
+
+#one:after {
+    content:'';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-top: solid 35px #FFF;
+    border-left: solid 35px transparent;
+    border-right: solid 35px transparent;
+    
+}
+
+#two {
+    background-color: #F2F2F2;
+    .container {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
 }
 
 /* Main marketing message and sign up button */
@@ -46,6 +127,7 @@ h1, h2, h3, h4 {
 .jumbotron-text {
     margin: 100px auto;
 }
+
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
@@ -54,73 +136,6 @@ h1, h2, h3, h4 {
 .row {
     margin-top: 50px;
     margin-bottom: 50px;
-}
-
-.row >ul {
-    list-style-type: none;
-}
-.ul-wrapper {
-    width: 600px;
-    margin: auto;
-}
-
-/* Customize the nav-justified links to be fill the entire space of the .navbar */
-.navbar-container {
-    background-color: $gray-lighter;
-}
-.nav-justified {
-  background-color: #eee;
-//  border: 1px solid #ccc;
-//  border-radius: 5px;
-}
-.nav-justified > li > a {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  margin-bottom: 0;
-  font-weight: bold;
-  color: #777;
-  text-align: center;
-//  background-color: #e5e5e5;
-//  background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e5e5e5));
-//  background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
-//  background-image:      -o-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
-//  background-image:         linear-gradient(to bottom, #f5f5f5 0%,#e5e5e5 100%);
-//  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-//  background-repeat: repeat-x; /* Repeat the gradient */
-//  border-bottom: 1px solid #d5d5d5;
-}
-.nav-justified > .active > a,
-.nav-justified > .active > a:hover,
-.nav-justified > .active > a:focus {
-  background-color: #ddd;
-//  background-image: none;
-//  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
-//          box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
-}
-//.nav-justified > li:first-child > a {
-//  border-radius: 5px 5px 0 0;
-//}
-//.nav-justified > li:last-child > a {
-//  border-bottom: 0;
-//  border-radius: 0 0 5px 5px;
-//}
-
-@media (min-width: 768px) {
-  .nav-justified {
-    max-height: 52px;
-  }
-  .nav-justified > li > a {
-    border-right: 1px solid #d5d5d5;
-    border-left: 1px solid #fff;
-  }
-  .nav-justified > li:first-child > a {
-    border-left: 0;
-//    border-radius: 5px 0 0 5px;
-  }
-  .nav-justified > li:last-child > a {
-    border-right: 0;
-//    border-radius: 0 5px 5px 0;
-  }
 }
 
 /* Responsive: Portrait tablets and up */
